[package]
name = "pillar_candy"
version = "0.1.0"
authors = ["GiulianoCTRL <35188493+GiulianoCTRL@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.2", features = ["canvas", "image"] }
reqwest = { version = "0.10.10", features = ["blocking"] }
tokio = { version = "0.2", features = ["full"] }
roxmltree = "0.14.0"
async-std = "1.3.0"
