[package]
name = "pillar_candy"
version = "0.0.1"
authors = ["GiulianoCTRL <35188493+GiulianoCTRL@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { git = "https://github.com/rust-windowing/winit.git" }
iced = { git = "https://github.com/hecrj/iced", features = ["canvas", "image"] }
reqwest = { version = "0.10.10", features = ["blocking"] }
tokio = { version = "0.2", features = ["full"] }
select = "0.6.0-alpha.1"
regex = "1.4.5"
lazy_static = "1.4.0"
# async-std = "1.3.0"
